WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260816
REGRESSION(
267321@main
): [ iOS Mac ] ASSERTION FAILED: style() in WebCore::FontCascade &WebCore::CSSToLengthConversionData::fontCascadeForFontUnits()
https://bugs.webkit.org/show_bug.cgi?id=260816
Summary
REGRESSION(267321@main): [ iOS Mac ] ASSERTION FAILED: style() in WebCore::Fo...
Dawn Morningstar
Reported
2023-08-28 13:28:31 PDT
imported/w3c/web-platform-tests/css/geometry/DOMMatrix-001.html is a constant crash on all queues after
267321@main
https://commits.webkit.org/267321@main
HISTORY:
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fgeometry%2FDOMMatrix-001.html
CRASH-LOG-URL:
https://ews-build.s3-us-west-2.amazonaws.com/macOS-Monterey-Release-WK2-Tests-EWS/227be385-15005-rerun/imported/w3c/web-platform-tests/css/geometry/DOMMatrix-001-crash-log.txt
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-28 13:29:03 PDT
<
rdar://problem/114582938
>
Dawn Morningstar
Comment 2
2023-08-28 13:54:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17142
EWS
Comment 3
2023-08-28 13:58:39 PDT
Test gardening commit
267362@main
(3c9d9bada4e9): <
https://commits.webkit.org/267362@main
> Reviewed commits have been landed. Closing PR #17142 and removing active labels.
Ryan Haddad
Comment 4
2023-08-28 14:52:51 PDT
ASSERTION FAILED: style() /Volumes/Data/worker/Apple-Ventura-Debug-Build/build/Source/WebCore/css/CSSToLengthConversionData.cpp(68) : const WebCore::FontCascade &WebCore::CSSToLengthConversionData::fontCascadeForFontUnits() const 1 0x3bb1e12a9 WTFCrash 2 0x440f6246b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x44442a661 WebCore::CSSToLengthConversionData::fontCascadeForFontUnits() const 4 0x4443e82b7 WebCore::CSSPrimitiveValue::computeNonCalcLengthDouble(WebCore::CSSToLengthConversionData const&, WebCore::CSSUnitType, double) 5 0x4443e7e0b WebCore::CSSPrimitiveValue::computeLengthDouble(WebCore::CSSToLengthConversionData const&) const 6 0x4443e815d double WebCore::CSSPrimitiveValue::computeLength<double>(WebCore::CSSToLengthConversionData const&) const 7 0x4445402e7 WebCore::Length WebCore::CSSPrimitiveValue::convertToLength<26>(WebCore::CSSToLengthConversionData const&) const 8 0x44454023b WebCore::convertToFloatLength(WebCore::CSSPrimitiveValue const*, WebCore::CSSToLengthConversionData const&) 9 0x444540a4a WebCore::transformForValue(WebCore::CSSValue const&, WebCore::CSSToLengthConversionData const&) 10 0x444540451 WebCore::transformsForValue(WebCore::CSSValue const&, WebCore::CSSToLengthConversionData const&) 11 0x4444a68af WebCore::DOMMatrixReadOnly::parseStringIntoAbstractMatrix(WTF::String const&) 12 0x4444b2901 WebCore::DOMMatrix::create(WebCore::ScriptExecutionContext&, std::__1::optional<std::__1::variant<WTF::String, WTF::Vector<double, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>>>&&)::$_0::operator()(WTF::String const&) const
Ben Schwartz
Comment 5
2023-08-28 15:57:11 PDT
***
Bug 260827
has been marked as a duplicate of this bug. ***
Tim Nguyen (:ntim)
Comment 6
2023-08-28 16:19:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17155
EWS
Comment 7
2023-08-28 18:06:20 PDT
Committed
267378@main
(5b6ab99882da): <
https://commits.webkit.org/267378@main
> Reviewed commits have been landed. Closing PR #17155 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug