REGRESSION(267321@main): ASSERTION FAILED: style() in WebCore::CSSToLengthConversionData::fontCascadeForFontUnits() https://bugs.webkit.org/show_bug.cgi?id=260816 rdar://114582938

Reviewed by Cameron McCormack.

Throw a SyntaxError when a DOMMatrix() is initialized with relative units per spec, don't let attempt to compute relative units with missing required dependencies.

https://drafts.fxtf.org/geometry/#dommatrix-parse

> Parse transformList into parsedValue given the grammar for the CSS transform property. The result will be a <transform-list>, the keyword none, or failure. If parsedValue is failure, or any <transform-function> has <length> values without absolute length units, or any keyword other than none is used, then return failure. [CSS3-SYNTAX] [CSS3-TRANSFORMS]

* LayoutTests/TestExpectations
* LayoutTests/imported/w3c/web-platform-tests/css/geometry/DOMMatrix-001-expected.txt:
* Source/WebCore/css/CSSPrimitiveValue.h:
* Source/WebCore/css/CSSPrimitiveValueMappings.h:
(WebCore::CSSPrimitiveValue::convertingToLengthHasRequiredConversionData const):
(WebCore::CSSPrimitiveValue::convertToLength const):
(WebCore::CSSPrimitiveValue::convertingToLengthRequiresNonNullStyle const): Deleted.
* Source/WebCore/css/calc/CSSCalcExpressionNode.h:
* Source/WebCore/css/calc/CSSCalcInvertNode.h:
* Source/WebCore/css/calc/CSSCalcNegateNode.h:
* Source/WebCore/css/calc/CSSCalcOperationNode.cpp:
(WebCore::CSSCalcOperationNode::convertingToLengthHasRequiredConversionData const):
(WebCore::CSSCalcOperationNode::convertingToLengthRequiresNonNullStyle const): Deleted.
* Source/WebCore/css/calc/CSSCalcOperationNode.h:
* Source/WebCore/css/calc/CSSCalcPrimitiveValueNode.cpp:
(WebCore::CSSCalcPrimitiveValueNode::convertingToLengthHasRequiredConversionData const):
(WebCore::CSSCalcPrimitiveValueNode::convertingToLengthRequiresNonNullStyle const): Deleted.
* Source/WebCore/css/calc/CSSCalcPrimitiveValueNode.h:
* Source/WebCore/css/calc/CSSCalcValue.cpp:
(WebCore::CSSCalcValue::convertingToLengthHasRequiredConversionData const):
(WebCore::CSSCalcValue::convertingToLengthRequiresNonNullStyle const): Deleted.
* Source/WebCore/css/calc/CSSCalcValue.h:

Canonical link: https://commits.webkit.org/267378@main